Fix tags wrap on single pages

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -465,6 +465,7 @@ figure
             margin-left: 0
             margin-top: $lh
             text-align: left
+            white-space: normal
             svg
                 display: none
             a
